--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:padding="16dp" />
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph" />
 </FrameLayout>
+
+<!--
+    android:name >- can be any specific fragment, but
+    setting FragmentContainerView to NavHostFragment allow
+    navigation between Fragments
+
+    app:defaultNavHost >- allows FragmentContainer to interact with navigation hierarchy ie,
+    pressing back button pops out current fragment and shows the previous one
+
+    app:navGraph >- points to a .xml which defines how app Fragments can navigate from one another
+-->
